--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -24071,7 +24071,7 @@ main {
 }
 
 .start-banner {
-  background-color: #6f42c1;
+  background-color: #732DA9;
   margin-top: 16px;
   border-radius: 40px;
   padding: 40px 16px;
@@ -24086,7 +24086,7 @@ main {
 .flow-top {
   position: relative;
   margin-top: 16px;
-  padding: 0 16px;
+  padding: 0 16px 24px;
   color: #fff;
 }
 
@@ -24098,11 +24098,11 @@ main {
 .flow-top__bg {
   position: absolute;
   width: 100%;
-  height: 50vh;
+  height: 70vh;
   top: 22px;
   left: 0;
   border-radius: 24px;
-  background-color: #6f42c1;
+  background-color: #732DA9;
   z-index: 0;
 }
 
@@ -24509,6 +24509,10 @@ main {
 .add-file span {
   height: 16px;
   color: #6f42c1;
+}
+
+.form-field--sms {
+  max-width: 131px;
 }
 
 .tac {
